# deep-learning-final-project

./: .gitignore  02_prepare_data.py  03_baseline_eval.py  03_detect_anchor_tokens.py  04_train_reinforced.py  05_translate_data.py  05a_extract_entities.py  06_cache_generic_logits.py  07_dynamic_unlearn.py  07_unlearn.py  08_dynamic_unlearn.py  08_eval_unlearned.py  09_eval_unlearned.py  10_generate_samples.py  10_plot_metrics.py  README.md  benchmark_unlearned_model.py  hp_unlearning.ipynb  plot_selective_results.py  pyproject.toml  query_unlearned_model.py  requirements.txt  selective_unlearn.py  text_extract.py
docs/: illad.txt
figures/hp/: selective_unlearning_summary.csv
figures/illad/: selective_unlearning_summary.csv
qual/bible/emotion/: responses.json
qual/hp/random/: responses.json
qual/iliad/emotion/: responses.json
qual/iliad/random/: responses.json
qual/iliad/surprisal/: responses.json
results/bible/emotion/: volatility_results_j-hartmann_emotion-english-distilroberta-base.json
results/bible/random/: random_results.json
results/bible/surprisal/: surprisal_results_all-mpnet-base-v2.json  surprisal_results_nomic-ai_nomic-embed-text-v1.5.json
results/hp/random/: random_results.json
results/hp/surprisal/: surprisal_results_all-MiniLM-L6-v2.json
results/iliad/: chunks.json
results/iliad/surprisal/: surprisal_results_BAAI_bge-base-en-v1.5.json  surprisal_results_all-MiniLM-L6-v2.json
results/text_extract/random/: random_results.json
selective_unlearning_runs/bible/emotion/: general_benchmarks.json  metrics.json  summary.json
selective_unlearning_runs/bible/random/: general_benchmarks.json  metrics.json  reinforced_loss_log.json  selected_chunks.json  summary.json  unlearn_loss_log.json
selective_unlearning_runs/bible/surprisal/: general_benchmarks.json  metrics.json  reinforced_loss_log.json  summary.json  unlearn_loss_log.json
selective_unlearning_runs/emotion_20260505_152828/: config.json
selective_unlearning_runs/hp/emotion/: general_benchmarks.json  reinforced_loss_log.json
selective_unlearning_runs/hp/random/: config.json  metrics.json  summary.json
selective_unlearning_runs/random_20260505_152129/: config.json  metrics.json  summary.json
selective_unlearning_runs/random_20260505_154106/: metrics.json  reinforced_loss_log.json
selective_unlearning_runs/surprisal_20260505_152829/: config.json  metrics.json  selected_chunks.json  summary.json  unlearn_loss_log.json
src/unlearning_demo/: __init__.py  anchors.py  cli.py  config.py  data.py  device.py  imports.py  math_utils.py  modeling.py  preflight.py  report.py  retain_eval.py  score.py  smoke.py  token_alignment.py  torch_ops.py  train.py
supervised/: 00_preflight.sh  01_profile_model.py  06_extract_entities.py  README.md  _validate_entities.py  generation_samples.txt  run_phase2.sh  run_tests.sh  training_metrics.json  wmdp_entities_template.json
tests/: test_alignment.py  test_anchors.py  test_contamination_guard.py  test_math_utils.py
text-extraction/: README.md  benchmark_unlearned_model.py  plot_selective_results.py  pyproject.toml  query_unlearned_model.py  selective_unlearn.py  text_extract.py
text-extraction/docs/: bible.txt
unsupervised/: 01_load_corpus.py  02_train_reinforced.py  04_unlearn.py  05_eval_hp.py  README.md  requirements.txt
(+85 files in other folders)
