[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wmdp-unlearning-demo"
version = "0.1.0"
description = "Hello-world prototype for approximate unlearning on WMDP-Cyber."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "accelerate>=0.30",
    "datasets>=2.19",
    "huggingface-hub>=0.23",
    "peft>=0.11",
    "torch>=2.3",
    "transformers>=4.41",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]
cuda = [
    "bitsandbytes>=0.43; platform_system == 'Linux'",
]
eval = [
    "lm-eval>=0.4.2",
]

[project.scripts]
unlearning-demo = "unlearning_demo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: requires gated model/data access and accelerator resources",
]
